[package]
name = "mod_crate"
version = "0.1.0"
authors = ["Raashid Mehmood <raashidmehmood1978@gmail.com>"]
edition = "2018"

description = "Assignment 7 crate, use it in main.rs file to execute"
license = "MIT"
repository = "https://github.com/Raashid-Mehmood/Repository_Assignment7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
